--- a/practice/test.html
+++ b/practice/test.html
@@ -30,6 +30,7 @@
     <!--  -->
     <div class="text-container">
         <img src="kitty.jpg" class="text-img">
+        <div>
         ----------Linux----------
         安裝軟體：
         sudo apt-get install ***
@@ -125,6 +126,7 @@
             =>Displays current transfer mode (ASCII or binary)
         
         ##########FTP_Server 指令##########
+        </div>
     </div>
 </body>
 </html>
